# tyr

./: .bazelrc  .gitignore  .gitmessage  .gitmessage.txt  .gitmodules  BUILD.bazel  CLAUDE.md  Examples.lean  MODULE.bazel  Makefile  ModdedTrainGPT.lean  Readme.md  Test.lean  TestDataLoader.lean  TestDiffusion.lean  TestGuard.lean  TestModdedGPT.lean  Tests.lean  TestsExperimental.lean  TrainDiffusion.lean  TrainGPT.lean  Tyr.lean  build.ninja  dependencies_macos.sh  lake-manifest.json  lakefile.lean  lean-toolchain  leanWithPlugin.sh  leanpkg.toml  load_modules.sh  output.ppm
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  commit-message-lint.yml  pages.yml
Examples/: ModdedTrainGPT.lean  README.md  TestGuard.lean  TrainDiffusion.lean  TrainGPT.lean
Examples/AlphaGradPort/: A0Train.lean  PolicySweep.lean  PolicySweepMain.lean  PolicyTrain.lean  PolicyTrainMain.lean  README.md  RoeFlux1dA0.lean  TaskSweep.lean  Tasks.lean
Examples/BranchingFlows/: BranchingFlowsDemo.lean  ContinuousTrainDemo.lean  DiscreteTrainDemo.lean  MixedTrainDemo.lean  plot_mixed_demo.py
Examples/Diffusion/: Diffusion.lean  DiffusionCheckpoint.lean  DiffusionSchedule.lean  DiffusionTrain.lean
Examples/Flux/: FluxDebug.lean  FluxDemo.lean
Examples/GPT/: Checkpoint.lean  GPT.lean  GPTDataLoader.lean  ModdedGPT.lean  ModdedTrain.lean  NanoGPTCopy.lean  Pretraining.lean  RLTrain.lean  RiemannianNanoGPT.lean  RunRiemannianNanoGPT.lean  Train.lean
Examples/GPU/: FixtureRunner.lean  RunCopy.lean  RunFlashAttn.lean  RunLayerNorm.lean  RunMhaH100.lean  RunMhaH100Seq768.lean  RunMhaH100Train.lean  RunRotary.lean  RunThunderKittensCopy.lean  RunThunderKittensFlashAttn.lean  RunThunderKittensLayerNorm.lean  RunThunderKittensMhaH100.lean  RunThunderKittensMhaH100Seq768.lean  RunThunderKittensMhaH100Train.lean  RunThunderKittensRotary.lean
Examples/NanoChat/: ChatSFT.lean  GRPO.lean  ModdedGPT.lean  ModdedTrain.lean  NanoChat.lean  Pipeline.lean  RunChat.lean  TrainNanoChat.lean
Examples/NanoProof/: NanoProof.lean  RLTrain.lean
Examples/Qwen25Omni/: RunHF.lean
Examples/Qwen35/: RunHF.lean
Examples/Qwen3ASR/: LiveMic.lean  LiveMicTrueStream.lean  Transcribe.lean
Examples/Qwen3TTS/: EndToEnd.lean
Examples/Whisper/: Transcribe.lean
Tests/: RunDiffEqSDEOrderParity.lean  RunDiffEqUnderdampedOrderParity.lean  RunRiemannianNanoGPTTests.lean  RunTestDataLoader.lean  RunTestDiffEq.lean  RunTestDiffEqAdjoint.lean  RunTestDiffEqAdjointCore.lean  RunTests.lean  RunTestsExperimental.lean  Test.lean  TestADElimAlphaGradMctx.lean  TestADElimFromJaxpr.lean  TestADElimGraph.lean  TestADElimLowering.lean  TestADElimOrderPolicy.lean  TestADFrontendElab.lean  TestADFrontendSignature.lean  TestADGraphaxAlphaGradCoverageGate.lean  TestADGraphaxAlphaGradParity.lean  TestADJaxprLike.lean  TestADJaxprLikeElabFixture.lean  TestADJaxprLikeExtract.lean  TestADSparse.lean  TestADTensorStructFlatten.lean  TestADTensorStructSchema.lean  TestAdditionalManifolds.lean  TestAlphaGradPortExamples.lean  TestAutoGrad.lean  TestBranchingFlows.lean  TestCheckpoint.lean  TestDataLoader.lean  TestDiffEq.lean  TestDiffEqAdjoint.lean  TestDiffEqAdjointCore.lean  TestDiffEqAdjointParity.lean  TestDiffEqBrownianFinParity.lean  TestDiffEqBrownianOptionParity.lean  TestDiffEqContainerBrownian.lean  TestDiffEqEventSaveParity.lean  TestDiffEqEventTreeParity.lean  (+52 more)
Tyr/: AD.lean  AutoGrad.lean  Basic.lean  Checkpoint.lean  Data.lean  DataLoader.lean  DiffEq.lean  Diffusion.lean  DiffusionCheckpoint.lean  DiffusionTrain.lean  Distributed.lean  GPT.lean  GPU.lean  Log.lean  MCTS.lean  Manifolds.lean  Mctx.lean  MctxDag.lean  Metrics.lean  ModdedGPT.lean  ModdedTrain.lean  Modular.lean  Module.lean  NanoProof.lean  Optim.lean  PRNG.lean  Pipeline.lean  Prototype.lean  Prover.lean  RL.lean  RLTrain.lean  SafeTensors.lean  Sharding.lean  TensorStruct.lean  Tokenizer.lean  Torch.lean  Train.lean  Widget.lean  XLA.lean
Tyr/AD/: Elim.lean  JaxprLike.lean  Sparse.lean  TensorStructSchema.lean
Tyr/Audio/: AppleInput.lean
Tyr/Data/: Download.lean  HuggingFace.lean  Pipeline.lean  Pretraining.lean  Task.lean  TaskClass.lean  Tasks.lean
Tyr/DiffEq/: Adjoint.lean  Brownian.lean  Integrate.lean  Interpolation.lean  Path.lean  RootFinder.lean  SaveAt.lean  Solution.lean  StepSizeController.lean  Term.lean  Types.lean
Tyr/Eval/: CORE.lean
Tyr/GPU/: AD.lean  AutoGrad.lean  Capabilities.lean  Kernels.lean  Tile.lean  Types.lean
Tyr/Generator/: Engine.lean  KVCache.lean  Tools.lean
Tyr/Manifolds/: Basic.lean  Embedded.lean  FixedRank.lean  Grassmann.lean  Hyperbolic.lean  Oblique.lean  Optimizer.lean  Orthogonal.lean  PSD.lean  PoincareBall.lean  Positive.lean  PositiveDefinite.lean  Product.lean  Pymanopt.lean  Sphere.lean  Stiefel.lean
Tyr/Mctx/: ActionSelection.lean  Base.lean  Batched.lean  (+6 more)
cc/: BUILD.bazel  Makefile  plugin_init.cpp
cc/lxla/: Makefile
cc/lxla/include/: lxla_client.h
cc/lxla/src/: lxla.cpp  lxla_client.cpp
cc/src/: apple_audio_input.mm  apple_vl_processor.mm  tyr.cpp  tyr_distributed.cpp  tyr_execution.cpp  tyr_gpu_kernel_stubs.cpp  tyr_media_stub.cpp  tyr_parquet.cpp  tyr_polar.cpp
cc/tools/: generate_gpu_kernel_stubs.py
dev/: alphagrad_parity_checklist.md  f01_lean_args_evaluation.md  graphax_alphagrad_support_matrix.md  graphax_elimination_issue_sequence.md  graphax_parity_checklist.md  graphax_vertex_elimination_mapping.md  issues.md  qwen35_tokenizer_dump.lean  resolve_qwen35_08b.lean  resolve_qwen35_27b.lean  riemannian_metric_factor_plan.md  tensorstruct_lean4_ad_integration_plan.md  thunderkittens_porting_tracker.md  tyr_ad_improvement_plan.md
docbuild/: lake-manifest.json  lakefile.toml
plugin/: Makefile  TyrPlugin.lean
scripts/: check-commit-messages.sh  check_target_parity.sh  lean_cc_wrapper.sh  qwen3tts_asr_regression.sh  qwen3tts_decode_codes.py  qwen3tts_encode_audio.py  qwen3tts_parity_regression.sh  qwen3tts_prepare_speaker_mel.py  qwen3tts_tokenize_text.py  setup-git-hooks.sh
test/: common.sh  test_main.sh  test_out.sh  test_run.sh
toolchain/: BUILD.bazel
(+331 files in other folders)
