"""Root BUILD file for Tyr."""

load("@rules_lean//:defs.bzl", "lean_binary", "lean_library")

package(default_visibility = ["//visibility:public"])

# Main Tyr library - core deep learning infrastructure
lean_library(
    name = "Tyr",
    srcs = ["Tyr.lean"] + glob(["Tyr/**/*.lean"]),
    cc_deps = ["//cc:TyrC"],
    module_name = "Tyr",
)

# Examples library
lean_library(
    name = "Examples",
    srcs = glob(["Examples/**/*.lean"]),
    deps = [":Tyr"],
    module_name = "Examples",
)

# Tests library
lean_library(
    name = "Tests",
    srcs = glob(["Tests/**/*.lean"]),
    deps = [
        ":Tyr",
        "@lean_test//:LeanTest",
    ],
    module_name = "Tests",
)

# Experimental tests library
lean_library(
    name = "TestsExperimental",
    srcs = ["TestsExperimental.lean"],
    deps = [
        ":Tests",
    ],
    module_name = "TestsExperimental",
)

# Training executables
alias(
    name = "train",
    actual = ":TrainGPT",
)

lean_binary(
    name = "TrainGPT",
    srcs = ["Examples/TrainGPT.lean"],
    deps = [":Examples"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TrainDiffusion",
    srcs = ["Examples/TrainDiffusion.lean"],
    deps = [":Examples"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TrainNanoChat",
    srcs = ["Examples/NanoChat/TrainNanoChat.lean"],
    deps = [":Examples"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "FluxDemo",
    srcs = ["Examples/Flux/FluxDemo.lean"],
    deps = [":Examples"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "FluxDebug",
    srcs = ["Examples/Flux/FluxDebug.lean"],
    deps = [":Examples"],
    cc_deps = ["//cc:TyrC"],
)

# Test executable
lean_binary(
    name = "test_runner",
    srcs = ["Tests/RunTests.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "test_runner_experimental",
    srcs = ["Tests/RunTestsExperimental.lean"],
    deps = [":TestsExperimental"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestDiffusion",
    srcs = ["Tests/TestDiffusion.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestDataLoader",
    srcs = ["Tests/TestDataLoader.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestDiffEq",
    srcs = ["Tests/TestDiffEq.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestDiffEqAdjoint",
    srcs = ["Tests/TestDiffEqAdjoint.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestDiffEqAdjointCore",
    srcs = ["Tests/TestDiffEqAdjointCore.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestGPUDSL",
    srcs = ["Tests/TestGPUDSL.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)

lean_binary(
    name = "TestGPUKernels",
    srcs = ["Tests/TestGPUKernels.lean"],
    deps = [":Tests"],
    cc_deps = ["//cc:TyrC"],
)
